Bug 418077 - Kio_iso crash
Summary: Kio_iso crash
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Krusader Bugs Distribution List
URL:
Keywords:
: 413239 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-02-23 08:01 UTC by Tony
Modified: 2020-07-26 23:25 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tony 2020-02-23 08:01:06 UTC
SUMMARY

Opening any *iso file from Dolphin using "Actions > Browse ISO"ends with Something crashing.
The file does open in a new tab but whatever is crashing crashes again and again everytime you either swicth betweeb tabs or minimize/maximize the Dolphin window.

This only happens while using openSuse Tumbleweed kde unstable repos, it's been going on for quite a while though.

STEPS TO REPRODUCE
1. Using Dolphin open an *.iso file by Right  Click > Actions > Browse ISO
2. Mininize then maximize the Dolphin window to trigger even more crashes.
3. See your sytemtray get fill with sad faces.

OBSERVED RESULT
Application: <unknown> (<unknown>), signal: Segmentation fault

EXPECTED RESULT
No crashes

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.18.80
KDE Frameworks Version: 5.68.0
Qt Version: 5.14.1

ADDITIONAL INFORMATION

Application: <unknown> (<unknown>), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[KCrash Handler]
#6  0x00007fd9ebdaf01a in kio_isoProtocol::createUDSEntry (isoEntry=isoEntry@entry=0x556150741860, entry=..., this=0x7ffdf5854a60) at /usr/src/debug/krusader-2.99.40-ku.257.2.x86_64/iso/iso.cpp:204
#7  0x00007fd9ebdb2c4f in kio_isoProtocol::stat (this=0x7ffdf5854a60, url=...) at /usr/src/debug/krusader-2.99.40-ku.257.2.x86_64/iso/iso.cpp:336
#8  0x00007fd9ea253456 in KIO::SlaveBase::dispatch (this=0x7ffdf5854a60, command=69, data=...) at /usr/src/debug/kio-5.67.0git.20200222T123547~eb20176d-ku.11.1.x86_64/src/core/slavebase.cpp:1233
#9  0x00007fd9ea25a806 in KIO::SlaveBase::dispatchLoop (this=this@entry=0x7ffdf5854a60) at /usr/src/debug/kio-5.67.0git.20200222T123547~eb20176d-ku.11.1.x86_64/src/core/slavebase.cpp:338
#10 0x00007fd9ebdb0a59 in kdemain (argc=<optimized out>, argv=0x55615071ba00) at /usr/src/debug/krusader-2.99.40-ku.257.2.x86_64/iso/iso.cpp:57
#11 0x0000556150690bcb in launch (argc=4, _name=0x55615071c0f8 "/usr/lib64/qt5/plugins/kio_iso.so", args=<optimized out>, cwd=<optimized out>, envc=0, envs=0x55615071c191 "", reset_env=false, tty=0x0, avoid_loops=false, startup_id_str=0x556150693175 "0") at /usr/src/debug/kinit-5.67.0git.20200212T213217~5e9d583-ku.5.4.x86_64/src/kdeinit/kinit.cpp:704
#12 0x0000556150691df8 in handle_launcher_request (sock=<optimized out>, who=<optimized out>) at /usr/src/debug/kinit-5.67.0git.20200212T213217~5e9d583-ku.5.4.x86_64/src/kdeinit/kinit.cpp:1142
#13 0x00005561506927d4 in handle_requests (waitForPid=0) at /usr/src/debug/kinit-5.67.0git.20200212T213217~5e9d583-ku.5.4.x86_64/src/kdeinit/kinit.cpp:1335
#14 0x000055615068d64d in main (argc=5, argv=<optimized out>) at /usr/src/debug/kinit-5.67.0git.20200212T213217~5e9d583-ku.5.4.x86_64/src/kdeinit/kinit.cpp:1773
[Inferior 1 (process 30902) detached]
Comment 1 Fabian Vogt 2020-06-26 09:28:30 UTC
This is because KIso::openArchive does not call KArchive::setRootDir, so rootDir() returns a KArchiveDirectory instead of the expected KIsoDirectory.
Comment 2 Bug Janitor Service 2020-06-26 15:45:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/krusader/-/merge_requests/17
Comment 3 Fabian Vogt 2020-06-30 06:50:48 UTC
Git commit 66c20af7793a474ca72348da9e97336c800108df by Fabian Vogt.
Committed on 30/06/2020 at 06:50.
Pushed by fvogt into branch 'master'.

kio_iso: Make the root directory a KIsoDirectory as well

In other places the code assumes that every KArchiveEntry is either a
KIsoDirectory or KIsoFile, but that was not true for rootDir().

FIXED: [ 418077 ] Kio_iso crash
Discussion: https://invent.kde.org/utilities/krusader/-/merge_requests/17

M  +4    -0    iso/kiso.cpp

https://invent.kde.org/utilities/krusader/commit/66c20af7793a474ca72348da9e97336c800108df
Comment 4 Tony 2020-07-26 23:25:54 UTC
*** Bug 413239 has been marked as a duplicate of this bug. ***