kio_iso: Make the root directory a KIsoDirectory as well

In other places the code assumes that every KArchiveEntry is either a
KIsoDirectory or KIsoFile, but that was not true for rootDir().

FIXED: [ 418077 ] Kio_iso crash
BUG: 418077
Discussion: https://invent.kde.org/utilities/krusader/-/merge_requests/17